:lipstick: Add styling to all views #11

--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Poll Question</title>
+        {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 </head>
 <body>
     <form action="{% url 'polls:vote' question.id %}" method="post">
