:hammer: Improve button look and add index page link on the top-left of result page. #17

--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -27,7 +27,7 @@
         </div>
     </fieldset>
         <div class="flex justify-center">
-            <input class="scale-125 mt-12 text-2xl bg-green-400 text-white rounded-lg hover:bg-green-500 focus:ring-blue-500" type="submit" value="Vote">
+            <input class="scale-125 mt-12 py-3 px-6 text-2xl bg-green-400 text-white rounded-full hover:bg-green-500 focus:ring-blue-500" type="submit" value="Vote">
         </div>
     </form>
     {% endblock %}
