--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -17,10 +17,10 @@
                     <span class="text-3xl text-gray-500">{{ question.question_text }}</span>
                 </div>
                 <div class="flex flex-row space-x-8">
-                    <div class="text-center h-0 w-24 bg-green-300 rounded-lg hover:bg-green-500 pb-8">
+                    <div class="text-center py-3 px-6 bg-green-300 rounded-full hover:bg-green-500">
                         <a class="text-2xl text-white" href="{% url 'polls:detail' question.id %}">Vote</a>
                     </div>
-                    <div class="text-center h-4 w-24 bg-green-300 rounded-lg hover:bg-green-500 pb-8">
+                    <div class="text-center py-3 px-6 bg-green-300 rounded-full hover:bg-green-500">
                         <a class="text-2xl text-white" href="{% url 'polls:results' question.id %}">Results</a>
                     </div>
                 </div>
