--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -2,19 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Results</title>
+    {% extends "base.html"%}
+    {% block title %}
+    <title>Vote Results</title>
+    {% endblock %}
         {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 </head>
 <body>
-    <h1>{{ question.question_text }}</h1>
+    {% block content %}
+        <div class="container mx-auto">
+			<section class="flex items-start justify-center h-screen m-10">
+                {% block polls %}
+                <div>
+                    <span class="text-gray-600 text-5xl">{{ question.question_text }}</span>
+                    <div class="text-gray-500 text-xl grid grid-cols-2 gap-4 mt-12">
+                        <div class="text-green-500 text-right col-span-2">Votes</div>
+                        {% for choice in question.choice_set.all %}
+                            <div>{{ choice.choice_text }}</div>
+                            <div class="text-right">{{ choice.votes }}</div>
+                        {% endfor %}
+                    </div>
+                </div>
+                {% endblock %}
+            </section>
+        </div>
 
-    <ul>
-    {% for choice in question.choice_set.all %}
-        <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-    {% endfor %}
-    </ul>
-
-    <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+    {% endblock %}
 </body>
 </html>
