--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -13,7 +13,7 @@
         {% block polls %}
             <div class="grid grid-cols-3 gap-4">
             {% for question in latest_question_list %}
-                <div class="flex flex-col justify-center p-16 m-16">
+                <div class="flex flex-col justify-center ring-2 ring-green-200 shadow-2xl rounded-lg p-16 m-16">
                     <div class="text-center pb-8">
                         <span class="text-3xl text-gray-500">{{ question.question_text }}</span>
                     </div>
