--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -8,10 +8,16 @@
     {% endblock %}
 </head>
 <body>
-    <p>Polls</p>
     {% if latest_question_list %}
         {% block polls %}
-            <div class="grid grid-cols-3 gap-4">
+            {% if messages %}
+                <div class="items-top bg-red-100 border border-red-400 text-2xl text-red-700 rounded-lg p-5">
+                    {% for message in messages %}
+                        <span{% if message.tags %} class="{{ message.tags }} block sm:inline"{% endif %}>{{ message }}</span>
+                    {% endfor %}
+                </div>
+            {% endif %}
+            <div class="grid grid-cols-3 gap-4 mt-6">
             {% for question in latest_question_list %}
                 <div class="flex flex-col justify-center ring-2 ring-green-200 shadow-2xl rounded-lg p-16 m-16">
                     <div class="text-center pb-8">
