--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -19,7 +19,7 @@
         </nav>
         {% block content %}
 		<div class="container mx-auto">
-			<section class="flex items-center justify-center h-screen">
+			<section class="h-screen">
                 {% block polls %}
 				<h1 class="text-5xl">Django + Tailwind = ❤️</h1>
                 {% endblock %}
