--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -8,6 +8,11 @@
     {% endblock %}
 </head>
 <body>
+    {% if user.is_authenticated %}
+    Welcome back, {{ user.username }}
+    {% else %}
+    Please <a href="{% url 'login'%}?next={{request.path}}">Login</a>
+    {% endif %}
         {% block polls %}
     {% if latest_question_list %}
             {% if messages %}
